refactored header to js file

--- a/index.html
+++ b/index.html
@@ -20,66 +20,20 @@
   <div id="page-wrapper">
 
     <!-- Header -->
-    <header id="header">
-      <h1 id="logo">
-        <a href="index.html">Nick Damberg's Github</a>
-      </h1>
-      <nav id="nav">
-        <ul>
-          <li>
-            <a href="index.html">Home</a>
-          </li>
-          <li>
-            <a href="#">Layouts</a>
-            <ul>
-              <li>
-                <a href="left-sidebar.html">Left Sidebar</a>
-              </li>
-              <li>
-                <a href="right-sidebar.html">Right Sidebar</a>
-              </li>
-              <li>
-                <a href="no-sidebar.html">No Sidebar</a>
-              </li>
-              <li>
-                <a href="#">Submenu</a>
-                <ul>
-                  <li>
-                    <a href="#">Option 1</a>
-                  </li>
-                  <li>
-                    <a href="#">Option 2</a>
-                  </li>
-                  <li>
-                    <a href="#">Option 3</a>
-                  </li>
-                  <li>
-                    <a href="#">Option 4</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="elements.html">Elements</a>
-          </li>
-          <li>
-            <a href="#" class="button special">Sign Up</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <script src="assets/js/header.js"></script>
 
     <!-- Banner -->
     <section id="banner">
       <div class="content">
         <header>
-          <h2>The future has landed</h2>
-          <p>And there are no hoverboards or flying cars.
-            <br /> Just apps. Lots of mother flipping apps.</p>
+          <h2>My Github</h2>
+          <p>A simple template for speed and effecency,
+            <br /> And just apps. Lots of mother flipping apps.
+            <br /> Disclaimer, this site is still under construction.</p>
+
         </header>
         <span class="image">
-          <img src="images/pic01.jpg" alt="" />
+          <img src="images/headshot.jpg" alt="" />
         </span>
       </div>
       <a href="#one" class="goto-next scrolly">Next</a>
@@ -95,8 +49,8 @@
           <div class="row">
             <div class="4u 12u$(medium)">
               <header>
-                <h2>Odio faucibus ipsum integer consequat</h2>
-                <p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+                <h2>(indroduction)</h2>
+                <p>My name is Nicholas Damberg, feel free to call me Nick.</p>
               </header>
             </div>
             <div class="4u 12u$(medium)">
