--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
   </div>
 
   <!-- Scripts -->
-  <script src="assets/js/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <!-- <script src="assets/js/jquery.min.js"></script> -->
   <script src="assets/js/jquery.scrolly.min.js"></script>
   <script src="assets/js/jquery.dropotron.min.js"></script>
   <script src="assets/js/jquery.scrollex.min.js"></script>
