--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<link rel="stylesheet" href="assets/css/layout.css" />
 	<link rel="stylesheet" href="assets/css/module.css" />
 	<link rel="stylesheet" href="assets/css/state.css" />
-	<link rel="stylesheet" href="assets/css/theme.css" />
+  <link rel="stylesheet" href="assets/css/theme.css" />
+  <!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
   <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
   <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 </head>
