--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 	<link rel="stylesheet" href="assets/css/module.css" />
 	<link rel="stylesheet" href="assets/css/state.css" />
   <link rel="stylesheet" href="assets/css/theme.css" />
-  <!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
   <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
   <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 </head>
@@ -55,19 +54,15 @@
           <div class="row">
             <div class="4u 12u$(medium)">
               <header>
-                <h2>(indroduction)</h2>
+                <h2>(introduction)</h2>
                 <p>My name is Nicholas Damberg, feel free to call me Nick.</p>
               </header>
             </div>
             <div class="4u 12u$(medium)">
-              <p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec. Blandit orci porttitor semper. Arcu phasellus tortor
-                enim mi nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis
-                porttitor accumsan consequat adipiscing lorem dolor.</p>
+              <p>I am a software developer and also a US Navy veteran, where I was an Information Technology Technician.  I had my own business building, repairing, and selling computers while in High School.  I am also on the board of directors for my local Kitsap create community.  I have been building, repairing, and networking computer hardware and software since I was in junior high. I still build and operate my own servers and networks with the latest technology I can get my hands on.</p>
             </div>
             <div class="4u$ 12u$(medium)">
-              <p>Morbi enim nascetur et placerat lorem sed iaculis neque ante adipiscing adipiscing metus massa. Blandit orci
-                porttitor semper. Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep
-                aliquet augue varius tempus. Feugiat lorem ipsum dolor nullam.</p>
+              <p>My latest endeavor has been leveraging software development to take advantage of all of my other skills, I have spent a lot of time self learning a lot of my skills and some traditional educational environments.  I am a very active member of the maker community and supporter of open source hardware and software, I am being handed the reigns for the groups website for both administration and design.  I am looking to use my skill set to build new and innovative things.</p>
             </div>
           </div>
         </div>
